--- a/SmokeTestsUI/SmokeTestsUI/SmokeTestsUI.csproj
+++ b/SmokeTestsUI/SmokeTestsUI/SmokeTestsUI.csproj
@@ -17,4 +17,8 @@
     <PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="AnyPage\" />
+  </ItemGroup>
+
 </Project>
